--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=5000
 DATABASE_URI=mongodb+srv://ayushsonone27:ayush1234%40@corntube.qtixnky.mongodb.net/
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=Ayush'sbackend
+ACCESS_TOKEN_SECRET_EXPIRY=1d
+REFRESH_TOKEN_SECRET=Ayush'sbackend
+REFRESH_TOKEN_SECRET_EXPIRY=10d
