added multer and cloudinary

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,8 @@ ACCESS_TOKEN_SECRET=Ayush'sbackend
 ACCESS_TOKEN_SECRET_EXPIRY=1d
 REFRESH_TOKEN_SECRET=Ayush'sbackend
 REFRESH_TOKEN_SECRET_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=dn2wlmdog
+CLOUDINARY_API_KEY=231314867512874
+CLOUDINARY_API_SECRET=EeiD92ibr59b7qk6arZTkqE8SEE
+CLOUDINARY_URL=cloudinary://231314867512874:EeiD92ibr59b7qk6arZTkqE8SEE@dn2wlmdog
